fixed spacing

--- a/css/style1.css
+++ b/css/style1.css
@@ -56,7 +56,7 @@
     display:flex;
     flex-direction:column;
     height:100vh;
-    padding-top:5vh;
+    padding-top:10vh;
     font-size: 2em;
   }
 
